Slight styling changes.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <script defer src="script.js"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="content">
+      <h1 class="title">Animating Gradients</h1>
+      <button class="fun">Hover over me!</button>
+    </div>
+  </body>
 </html>
