--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
   </head>
   <body>
     <div class="content">
-      <h1 class="title">Animating Gradients</h1>
+      <!-- <h1 class="title">Animating Gradients</h1> -->
+      <div class="now-playing">
+        <h1 class="song-info song-name"></h1>
+        <h3 class="song-info artist-name"></h3>
+        <h3 class="song-info album-name"></h3>
+      </div>
+
+      <div class="player-controls">
+        <audio
+          data-song-name="Proper Vivid"
+          data-artist-name="Lone"
+          data-album-name="Everything is Changing Colour"
+          src="assets/proper-vivid-lone.mp3"
+        ></audio>
+      </div>
     </div>
   </body>
 </html>
