Add track list, track items element.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
-    <title>Document</title>
+    <title>Gradient Audio Player</title>
   </head>
   <body>
     <div class="content">
@@ -19,11 +19,18 @@
 
       <div class="player-controls">
         <audio
-          data-song-name="Proper Vivid"
-          data-artist-name="Lone"
-          data-album-name="Everything is Changing Colour"
-          src="assets/proper-vivid-lone.mp3"
+          data-song-name=""
+          data-artist-name=""
+          data-album-name=""
+          src=""
         ></audio>
+      </div>
+    </div>
+
+    <div class="track-listing">
+      <div class="track-list">
+        <div class="track-item"><span>01</span> Dueling Auroras</div>
+        <div class="track-item"><span>02</span> Proper Vivid</d>
       </div>
     </div>
   </body>
