Add loadTrack function to play different audio tracks.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <div class="track-listing">
       <div class="track-list">
-        <div class="track-item"><span>01</span> Dueling Auroras</div>
-        <div class="track-item"><span>02</span> Proper Vivid</d>
+        <div class="track-item" data-track-number='1'><span>01</span> Dueling Auroras</div>
+        <div class="track-item" data-track-number='2'><span>02</span> Proper Vivid</d>
       </div>
     </div>
   </body>
