--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <div class="content">
       <!-- <h1 class="title">Animating Gradients</h1> -->
       <div class="now-playing">
-        <h1 class="song-info song-name"></h1>
-        <h3 class="song-info artist-name"></h3>
-        <h3 class="song-info album-name"></h3>
+        <div class="now-playing-art"> <img src="" class="song-info album-art"></div>
+       
+        <div class="now-playing-info">
+            <h1 class="song-info song-name"></h1>
+            <h3 class="song-info artist-name"></h3>
+            <h3 class="song-info album-name"></h3>
+        </div>
+  
       </div>
 
       <div class="player-controls">
